@@ -1,3 +1,8 @@
+2001-06-18  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Recipe.pm (_parse_recursively): Turn off misc warnings during
+	recursion. Fix recursion bug introduced by Alisdair.
+
 2001-06-15  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Index.pm (verify): Turn off "void" warnings in rule verification
